--- a/pages/index.html
+++ b/pages/index.html
@@ -15,8 +15,8 @@
     <style>
         [x-cloak] { display: none; }
     </style>
-    <main class="h-[350vh] overflow-hidden z-50">
-        <div class="bg-zinc-950 h-[600vh] w-screen container flex flex-col">
+    <main class="h-[320vh] overflow-hidden z-50">
+        <div class="bg-zinc-950 h-[300vh] w-screen container flex flex-col">
             <section class="wrapper-hero absolute w-[400vw] h-screen will-change-transform flex-grow-[2]">
                 <div class="absolute left-0 h-screen w-screen flex items-center  gap-8 p-6">
                     <h2 class="font-[Dirtyline] text-[10vw] text-zinc-100">SCROLL</h2>
@@ -66,9 +66,21 @@
                     </g>
                 </svg>     
             </section>
-            <section class=" absolute h-full w-full top-[230vh]">
-                <div class="z-50 h-[200vh] p-16 bg-zinc-100 rounded-3xl">
-                    <div class="p-8"></div>
+            <section class="absolute h-full w-full top-[230vh]">
+                <div class="z-50 h-[100vh] p-16 bg-zinc-100 rounded-3xl">
+                    <div class="h-full w-full p-12 rounded-3xl ombre-int" style="background: rgb(240, 240, 240);">
+                        <div class="h-full w-full grid grid-cols-3 grid-rows-2 gap-12">
+                            <div id="card" class="rounded-3xl shadow-md p-2 bg-zinc-100"><div><div id="button" class="h-[3rem] w-[3rem] rounded-full bg-zinc-700 shadow-md flex justify-center items-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="rgb(244 244 245)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></div></div></div>
+                            <div id="card" class="rounded-3xl shadow-md p-2 bg-zinc-100"><div><div id="button" class="h-[3rem] w-[3rem] rounded-full bg-zinc-700 shadow-md flex justify-center items-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="rgb(244 244 245)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></div></div></div>
+                            <div id="card" class="rounded-3xl shadow-md p-2 bg-zinc-100"><div><div id="button" class="h-[3rem] w-[3rem] rounded-full bg-zinc-700 shadow-md flex justify-center items-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="rgb(244 244 245)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></div></div></div>
+                            <div id="card" class="rounded-3xl shadow-md p-2 bg-zinc-100"><div><div id="button" class="h-[3rem] w-[3rem] rounded-full bg-zinc-700 shadow-md flex justify-center items-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="rgb(244 244 245)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></div></div></div>
+                            <div id="card" class="rounded-3xl shadow-md p-2 bg-zinc-100"><div><div id="button" class="h-[3rem] w-[3rem] rounded-full bg-zinc-700 shadow-md flex justify-center items-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="rgb(244 244 245)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></div></div></div>
+                            <div id="card" class="rounded-3xl shadow-md p-2 bg-zinc-100"><div><div id="button" class="h-[3rem] w-[3rem] rounded-full bg-zinc-700 shadow-md flex justify-center items-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="rgb(244 244 245)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></div></div></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- <div class="p-8"></div>
                         <h2 class="text-4xl font-bold mb-4">Fonctionnalités d'Alpine.js</h2>
                         <div class="space-y-6">
                             <div>
@@ -107,10 +119,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div> 
-            </section>
-            
+                    </div>-->
         </div>    
 
         
